{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 22,
  "lineage": "22a299d4-1b1e-8073-fac0-41037b56a867",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lab-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-0",
            "internal_domain_name_suffix": "zjihyio0b2nulfqfglucrxiv1g.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "labConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-F5-83-36",
            "name": "aztf-labs-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "aztf-labs-rg",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            },
            "virtual_machine_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Compute/virtualMachines/aztf-labs-app-vm-0"
          },
          "dependencies": [
            "azurerm_subnet.lab-private",
            "azurerm_virtual_network.lab",
            "azurerm_resource_group.lab"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-1",
            "internal_domain_name_suffix": "zjihyio0b2nulfqfglucrxiv1g.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "labConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private"
              }
            ],
            "location": "westus2",
            "mac_address": "00-22-48-77-2E-A9",
            "name": "aztf-labs-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "aztf-labs-rg",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            },
            "virtual_machine_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Compute/virtualMachines/aztf-labs-app-vm-1"
          },
          "dependencies": [
            "azurerm_subnet.lab-private",
            "azurerm_virtual_network.lab",
            "azurerm_resource_group.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lab-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic",
            "internal_domain_name_suffix": "zjihyio0b2nulfqfglucrxiv1g.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "aztf-labs-app-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/publicIPAddresses/aztf-labs-public-ip",
                "subnet_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-public"
              }
            ],
            "location": "westus2",
            "mac_address": "00-22-48-78-29-DC",
            "name": "aztf-labs-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "aztf-labs-rg",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            },
            "virtual_machine_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Compute/virtualMachines/aztf-labs-bastion-vm"
          },
          "dependencies": [
            "azurerm_virtual_network.lab",
            "azurerm_public_ip.lab-bastion",
            "azurerm_resource_group.lab",
            "azurerm_subnet.lab-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "lab-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-0/ipConfigurations/labConfiguration|/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "labConfiguration",
            "network_interface_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-0"
          },
          "dependencies": [
            "azurerm_network_interface.lab-app",
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_lb.lab",
            "module.load-balancer.azurerm_lb_backend_address_pool.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-1/ipConfigurations/labConfiguration|/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "labConfiguration",
            "network_interface_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkInterfaces/aztf-labs-nic-1"
          },
          "dependencies": [
            "azurerm_network_interface.lab-app",
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_lb.lab",
            "module.load-balancer.azurerm_lb_backend_address_pool.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lab-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-private-sg",
            "location": "westus2",
            "name": "aztf-labs-private-sg",
            "resource_group_name": "aztf-labs-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Access",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP-Access",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.lab",
            "azurerm_subnet.lab-private",
            "azurerm_virtual_network.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lab-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-public-sg",
            "location": "westus2",
            "name": "aztf-labs-public-sg",
            "resource_group_name": "aztf-labs-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.0.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Access",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.lab",
            "azurerm_resource_group.lab",
            "azurerm_subnet.lab-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lab-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/publicIPAddresses/aztf-labs-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.94.250.36",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "aztf-labs-public-ip",
            "resource_group_name": "aztf-labs-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lab-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private",
            "name": "aztf-labs-subnet-private",
            "resource_group_name": "aztf-labs-rg",
            "virtual_network_name": "aztf-labs-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.lab",
            "azurerm_resource_group.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lab-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-public",
            "name": "aztf-labs-subnet-public",
            "resource_group_name": "aztf-labs-rg",
            "virtual_network_name": "aztf-labs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.lab",
            "azurerm_virtual_network.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "lab-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private",
            "network_security_group_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-private-sg",
            "subnet_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private"
          },
          "dependencies": [
            "azurerm_subnet.lab-private",
            "azurerm_virtual_network.lab",
            "azurerm_network_security_group.lab-private",
            "azurerm_resource_group.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "lab-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-public",
            "network_security_group_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-public-sg",
            "subnet_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-public"
          },
          "dependencies": [
            "azurerm_virtual_network.lab",
            "azurerm_network_security_group.lab-public",
            "azurerm_resource_group.lab",
            "azurerm_subnet.lab-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "217c50ca-0fda-451b-9605-32e828dd15de",
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet",
            "location": "westus2",
            "name": "aztf-labs-vnet",
            "resource_group_name": "aztf-labs-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-public",
                "name": "aztf-labs-subnet-public",
                "security_group": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-public-sg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/virtualNetworks/aztf-labs-vnet/subnets/aztf-labs-subnet-private",
                "name": "aztf-labs-subnet-private",
                "security_group": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/networkSecurityGroups/aztf-labs-private-sg"
              }
            ],
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.lab"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/frontendIPConfigurations/publicIPAddress",
                "name": "publicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/publicIPAddresses/mod-aztf-labs-lb-public-ip"
              }
            ],
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer",
            "location": "westus2",
            "name": "mod-aztf-labs-loadBalancer",
            "resource_group_name": "aztf-labs-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "aztf-labs-rg"
          },
          "dependencies": [
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_lb.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/probes/http-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "aztf-labs-rg"
          },
          "dependencies": [
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_lb.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/frontendIPConfigurations/publicIPAddress",
            "frontend_ip_configuration_name": "publicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/loadBalancingRules/mod-aztf-labs-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer",
            "name": "mod-aztf-labs-lb-rule",
            "probe_id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/loadBalancers/mod-aztf-labs-loadBalancer/probes/http-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "aztf-labs-rg"
          },
          "dependencies": [
            "azurerm_resource_group.lab",
            "module.load-balancer.azurerm_lb.lab",
            "module.load-balancer.azurerm_lb_backend_address_pool.lab",
            "module.load-balancer.azurerm_lb_probe.lab",
            "module.load-balancer.azurerm_public_ip.lab-lb"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lab-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/1f661277-267a-4d0b-90fa-eec94356dd42/resourceGroups/aztf-labs-rg/providers/Microsoft.Network/publicIPAddresses/mod-aztf-labs-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.156.85.138",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mod-aztf-labs-lb-public-ip",
            "resource_group_name": "aztf-labs-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "Owner": "Development",
              "Project": "AZTF Training"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lab"
          ]
        }
      ]
    }
  ]
}